implemented Polygon